# 2023-1-RayTracing

./: CMakeLists.txt  Camara.cpp  Camara.h  Luz.cpp  Luz.h  Objeto.cpp  Objeto.h  README.md  Rayo.h  main.cpp  vec3.cpp  vec3.h
